attempted fix of double scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ p {
 }
 
 .routesContainer {
-  /* overflow: none; */
+  overflow: none;
   height: 100vh;
   width: 100vw;
 
